@@ -13,6 +13,8 @@ Version 0.9.3 - Start of scripts for the document:
     * Fixed Issue 37 (NPE for LineNumbersRuler)
     * Fixed Issue 39 (Highlighting Tokens overrides selection highlights)
     * Fixed some JavaDoc comments.
+    * Fixed Line Numbers being displayed for the height of the editor and now
+      just for the actual available lines.
 Version 0.9.2:
     * Fixing Java Indentation and Un-Indentattion Actions
     * Added and used (in the Tester) clearUndoes on the SyntaxDocument
